--- a/stats_analyses_CRTs.Rmd
+++ b/stats_analyses_CRTs.Rmd
@@ -40,11 +40,12 @@ df <- read_delim("ambroisie.csv",
 # Parallel CRT
 ```{r}
 ### continous outcome (here it's not the target trial outcome, it's an intermediate outcome)
+## ambroise trial, standard two group CRT, cohort sampling (the same people recruited and assessed, but only assessed once, at the end)
 # reformat
 df$GROUP <- as.factor(df$GROUP)
 df$CENTER <- as.factor(df$CENTER)
 
-# GLMM
+# GLMM 
 calintake.glmm <- lmer(CALBEFORE ~ (1|CENTER) + GROUP,
                    data = df)
 tab_model(calintake.glmm)
